--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 
     "require": {
         "php": ">=5.3.0",
-        "symfony/console": "v2.3.4",
-        "symfony/yaml": "v2.3.4"
+        "symfony/console": "*",
+        "symfony/yaml": "*"
     },
 
     "require-dev": {
