--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "ecomdev/mage-ci": "master@dev"
+        "ecomdev/mage-ci": "master@dev",
+        "clue/phar-composer": "dev-master"
     },
 
     "autoload": {
