--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "ecomdev/mage-ci": "master@dev",
+        "firegento/mage-ci": "dev-master",
         "clue/phar-composer": "dev-master"
     },
 
@@ -32,7 +32,7 @@
     "bin": ["bin/mageconfigsync"],
 
     "repositories": [{
-        "type": "vcs",
-        "url": "https://github.com/punkstar/MageCI.git"
+        "type": "composer",
+        "url": "https://packages.firegento.com"
     }]
 }
