--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 
     "require": {
         "php": ">=5.3.0",
-        "symfony/console": "*",
-        "symfony/yaml": "*"
+        "symfony/console": "^2.6.4",
+        "symfony/yaml": "^2.6.4"
     },
 
     "require-dev": {
